// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dependent.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import dependency from "dependency";
(dependency: string);

=====================================output=====================================
// @flow

import dependency from "dependency";
(dependency: string);

================================================================================
`;

exports[`unrelated.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const x: string = 123;

=====================================output=====================================
// @flow

const x: string = 123;

================================================================================
`;
